--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-server-express": "^3.5.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "graphql": "^15",
     "graphql-tools": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
